# entreprenapp

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: django.yml
entreprenapp/: .coveragerc  manage.py
entreprenapp/core/: models.py  utils.py  views.py
entreprenapp/core/templates/core/: base.html  pagination.html
entreprenapp/core/templates/core/default/: add.html  edit.html
entreprenapp/core/templates/core/error/: 404.html  500.html
entreprenapp/core/templates/core/form/: custom_delete_checkbox.html
entreprenapp/core/templatetags/: genecric_name.py
entreprenapp/discuss/: admin.py  consumer.py  models.py  routing.py  tests.py  urls.py  views.py
entreprenapp/discuss/migrations/: 0001_initial.py
entreprenapp/discuss/templates/discuss/: room.html
entreprenapp/entreprenapp/: asgi.py  settings.py  urls.py  wsgi.py
entreprenapp/sales/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
entreprenapp/sales/migrations/: 0001_initial.py  0002_alter_customer_options_alter_estimate_options_and_more.py  0003_alter_orderline_quantity_alter_saler_logo.py
entreprenapp/sales/templates/sales/customer/: delete.html  list.html
entreprenapp/sales/templates/sales/estimate/: add.html  delete.html  edit.html  list.html  pdf.html
entreprenapp/sales/tests/: test_model.py  test_view.py
entreprenapp/static/css/: entrprenapp.css  pdf.css
entreprenapp/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
entreprenapp/users/migrations/: 0001_initial.py
entreprenapp/users/templates/users/: confirm_password_reset.html  login.html  password_reset.html  password_reset_complete.html  password_reset_done.html
(+15 files in other folders)
