[tool.poetry]
name = "entreprenapp"
version = "0.1.0"
description = "A small app that help entrepreneur to manage they they work."
authors = ["Mickaël  Anicette <mickaelanicette@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
Pillow = "^9.2.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.0.0"}
django-countries = {extras = ["pyuca"], version = "^7.3.2"}
crispy-bootstrap5 = "^0.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
coverage = "^6.4.4"
python-dateutil = "^2.8.2"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.isort]
py_version = '310'
force_grid_wrap = 0
multi_line_output = 3
include_trailing_comma = true
